src/Eg2.java
/* Generated By:JJTree&JavaCC: Do not edit this line. Eg2.java */
/** An Arithmetic Grammar. */
//package Parser;
import symbols.*;

public class Eg2/*@bgen(jjtree)*/implements Eg2TreeConstants, Eg2Constants {/*@bgen(jjtree)*/
  protected JJTEg2State jjtree = new JJTEg2State();Env curEnv = null;       // current symbol table
        /** Main entry point. */
        public static void main(String args[])
        {
                System.out.println("Reading from standard input...");
            Eg2 t = new Eg2(System.in);
            try
            {
              ASTStart n = t.Start();
              n.dump("");
              System.out.println("Thank you.");
            } catch (Exception e)
            {
              System.out.println("Oops.");
              System.out.println(e.getMessage());
              e.printStackTrace();
            }
        }

/** Main production. */
  final public ASTStart Start() throws ParseException {
                    /*@bgen(jjtree) Start */
  ASTStart jjtn000 = new ASTStart(JJTSTART);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
                curEnv = new Env(null);
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case STRUCT:
          StructDeclaration();
          break;
        default:
          jj_la1[0] = jj_gen;
          if (jj_2_1(3)) {
            FunctionDeclarator();
          } else if (jj_2_2(3)) {
            UniversalDeclarator();
          } else {
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case STRUCT:
        case VARIABLE_TYPE:
        case CONST:
        case VOID:
          ;
          break;
        default:
          jj_la1[1] = jj_gen;
          break label_1;
        }
      }
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
                {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

/** ************Declarations*************** .*/

/** array initializer. */
  final public void ArrayInitializer() throws ParseException {
                           /*@bgen(jjtree) ArrayInitializer */
  ASTArrayInitializer jjtn000 = new ASTArrayInitializer(JJTARRAYINITIALIZER);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Expression();
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 41:
          ;
          break;
        default:
          jj_la1[2] = jj_gen;
          break label_2;
        }
        jj_consume_token(41);
        Expression();
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void UniversalDeclarator() throws ParseException {
 /*@bgen(jjtree) UniversalDeclarator */
        ASTUniversalDeclarator jjtn000 = new ASTUniversalDeclarator(JJTUNIVERSALDECLARATOR);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);Token t = null;
        String id;
        Type type;
        int paraR;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CONST:
        jj_consume_token(CONST);
        break;
      default:
        jj_la1[3] = jj_gen;
        ;
      }
      t = jj_consume_token(VARIABLE_TYPE);
      id = MyID();
                jjtn000.setName(t.image);
                jjtn000.setId(id);
                if (curEnv.contains(id))
                        {if (true) throw new ParseException("Redifine: "+ id);}
                String s = t.image;
                if (s.compareTo("int") == 0)
                        type = Type.Int;
                else if (s.compareTo("bool") == 0)
                        type = Type.Bool;
                else if (s.compareTo("real") == 0)
                        type = Type.Real;
                else if (s.compareTo("char") == 0)
                        type = Type.Char;
                else
                        {if (true) throw new ParseException("Unknow type");}
                curEnv.put(id, type);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ASSIGNMENT_EQUAL_OPERATOR:
      case 42:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ASSIGNMENT_EQUAL_OPERATOR:
          jj_consume_token(ASSIGNMENT_EQUAL_OPERATOR);
          paraR = Expression();
                        jjtn000.genInter(0, paraR);

                        if ((type == Type.Bool) && (jjtn000.typeRight != Type.Bool))
                                {if (true) throw new ParseException("Error type of op: = /" + type.name + " " + jjtn000.typeRight.name);}
                        if ((type != Type.Bool) && (jjtn000.typeRight == Type.Bool))
                                {if (true) throw new ParseException("Error type of op: = /" + type.name + " " + jjtn000.typeRight.name);}
                        if ((type == Type.Char) && (jjtn000.typeRight == Type.Real))
                                {if (true) throw new ParseException("Error type of op: = /" + type.name + " " + jjtn000.typeRight.name);}
                        if ((type == Type.Int) && (jjtn000.typeRight == Type.Real))
                                {if (true) throw new ParseException("Error type of op: = /" + type.name + " " + jjtn000.typeRight.name);}
          break;
        case 42:
          jj_consume_token(42);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case INTEGER_LITERAL:
            jj_consume_token(INTEGER_LITERAL);
            break;
          default:
            jj_la1[4] = jj_gen;
            ;
          }
          jj_consume_token(43);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case ASSIGNMENT_EQUAL_OPERATOR:
            jj_consume_token(ASSIGNMENT_EQUAL_OPERATOR);
            jj_consume_token(44);
            ArrayInitializer();
            jj_consume_token(45);
            break;
          default:
            jj_la1[5] = jj_gen;
            ;
          }
          break;
        default:
          jj_la1[6] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      default:
        jj_la1[7] = jj_gen;
        ;
      }
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 41:
          ;
          break;
        default:
          jj_la1[8] = jj_gen;
          break label_3;
        }
        jj_consume_token(41);
        id = MyID();
                        jjtn000.setId(id);
                        if (curEnv.contains(id))
                                {if (true) throw new ParseException("Redifine: "+ id);}
                        curEnv.put(id, type);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ASSIGNMENT_EQUAL_OPERATOR:
        case 42:
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case ASSIGNMENT_EQUAL_OPERATOR:
            jj_consume_token(ASSIGNMENT_EQUAL_OPERATOR);
            paraR = Expression();
                        jjtn000.genInter(0, paraR);

                        if ((type == Type.Bool) && (jjtn000.typeRight != Type.Bool))
                                {if (true) throw new ParseException("Error type of op: = /" + type.name + " " + jjtn000.typeRight.name);}
                        if ((type != Type.Bool) && (jjtn000.typeRight == Type.Bool))
                                {if (true) throw new ParseException("Error type of op: = /" + type.name + " " + jjtn000.typeRight.name);}
                        if ((type == Type.Char) && (jjtn000.typeRight == Type.Real))
                                {if (true) throw new ParseException("Error type of op: = /" + type.name + " " + jjtn000.typeRight.name);}
                        if ((type == Type.Int) && (jjtn000.typeRight == Type.Real))
                                {if (true) throw new ParseException("Error type of op: = /" + type.name + " " + jjtn000.typeRight.name);}
            break;
          case 42:
            jj_consume_token(42);
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case INTEGER_LITERAL:
              jj_consume_token(INTEGER_LITERAL);
              break;
            default:
              jj_la1[9] = jj_gen;
              ;
            }
            jj_consume_token(43);
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case ASSIGNMENT_EQUAL_OPERATOR:
              jj_consume_token(ASSIGNMENT_EQUAL_OPERATOR);
              jj_consume_token(44);
              ArrayInitializer();
              jj_consume_token(45);
              break;
            default:
              jj_la1[10] = jj_gen;
              ;
            }
            break;
          default:
            jj_la1[11] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          break;
        default:
          jj_la1[12] = jj_gen;
          ;
        }
      }
      jj_consume_token(46);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/** struct declaration. */
  final public void StructDeclaration() throws ParseException {
 /*@bgen(jjtree) StructDeclaration */
        ASTStructDeclaration jjtn000 = new ASTStructDeclaration(JJTSTRUCTDECLARATION);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);Token t = null;
        String id;
    try {
      t = jj_consume_token(STRUCT);
      id = MyID();
                if (curEnv.contains(id))
                        {if (true) throw new ParseException("Redifine: "+ id);}
                curEnv.put(id, new Type(t.image, true));
      StructBody();
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/** struct body. */
  final public void StructBody() throws ParseException {
 /*@bgen(jjtree) StructBody */
        ASTStructBody jjtn000 = new ASTStructBody(JJTSTRUCTBODY);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);Env savedEnv = curEnv;
        curEnv = new Env(curEnv);
    try {
      jj_consume_token(44);
      StructDeclarations();
      jj_consume_token(45);
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
                curEnv = savedEnv;
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/** struct declarations. */
  final public void StructDeclarations() throws ParseException {
                             /*@bgen(jjtree) StructDeclarations */
  ASTStructDeclarations jjtn000 = new ASTStructDeclarations(JJTSTRUCTDECLARATIONS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case VARIABLE_TYPE:
        case CONST:
          ;
          break;
        default:
          jj_la1[13] = jj_gen;
          break label_4;
        }
        StructParameter();
      }
    } catch (Throwable jjte000) {
            if (jjtc000) {
              jjtree.clearNodeScope(jjtn000);
              jjtc000 = false;
            } else {
              jjtree.popNode();
            }
            if (jjte000 instanceof RuntimeException) {
              {if (true) throw (RuntimeException)jjte000;}
            }
            if (jjte000 instanceof ParseException) {
              {if (true) throw (ParseException)jjte000;}
            }
            {if (true) throw (Error)jjte000;}
    } finally {
            if (jjtc000) {
              jjtree.closeNodeScope(jjtn000, true);
            }
    }
  }

/** struct parameter. */
  final public void StructParameter() throws ParseException {
                          /*@bgen(jjtree) StructParameter */
  ASTStructParameter jjtn000 = new ASTStructParameter(JJTSTRUCTPARAMETER);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      UniversalDeclarator();
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/** function declarator. */
  final public void FunctionDeclarator() throws ParseException {
 /*@bgen(jjtree) FunctionDeclarator */
        ASTFunctionDeclarator jjtn000 = new ASTFunctionDeclarator(JJTFUNCTIONDECLARATOR);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);Token t;
        String id;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VOID:
        t = jj_consume_token(VOID);
        break;
      case VARIABLE_TYPE:
        t = jj_consume_token(VARIABLE_TYPE);
        break;
      default:
        jj_la1[14] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      id = MyID();
                jjtn000.setType(t.image);
                jjtn000.setName(id);
                jjtn000.genInter();
                if (curEnv.contains(id))
                        {if (true) throw new ParseException("Redifine: "+ id);}
                curEnv.put(id, new Type(t.image, true));
                Env savedEnv = curEnv;
                curEnv = new Env(curEnv);
      jj_consume_token(47);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VARIABLE_TYPE:
      case CONST:
        FunctionParameterList();
        break;
      default:
        jj_la1[15] = jj_gen;
        ;
      }
      jj_consume_token(48);
                jjtn000.writeReturn();
      FunctionBody();
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
                curEnv = savedEnv;
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/** function parameter list. */
  final public void FunctionParameterList() throws ParseException {
                                /*@bgen(jjtree) FunctionParameterList */
  ASTFunctionParameterList jjtn000 = new ASTFunctionParameterList(JJTFUNCTIONPARAMETERLIST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      FunctionParameter();
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 41:
          ;
          break;
        default:
          jj_la1[16] = jj_gen;
          break label_5;
        }
        jj_consume_token(41);
        FunctionParameter();
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/** function parameter. */
  final public void FunctionParameter() throws ParseException {
 /*@bgen(jjtree) FunctionParameter */
        ASTFunctionParameter jjtn000 = new ASTFunctionParameter(JJTFUNCTIONPARAMETER);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);Token t;
        String id;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CONST:
        jj_consume_token(CONST);
        break;
      default:
        jj_la1[17] = jj_gen;
        ;
      }
      t = jj_consume_token(VARIABLE_TYPE);
      id = MyID();
                jjtn000.setType(t.image);
                jjtn000.setName(id);
                jjtn000.genInter();
